[gd_scene load_steps=8 format=2]

[ext_resource path="res://titlescreen-node.gd" type="Script" id=1]
[ext_resource path="res://title screen/background.png" type="Texture" id=2]
[ext_resource path="res://title screen/title.png" type="Texture" id=3]
[ext_resource path="res://title screen/start game.png" type="Texture" id=4]
[ext_resource path="res://title screen/start game selected.png" type="Texture" id=5]
[ext_resource path="res://title screen/exit.png" type="Texture" id=6]
[ext_resource path="res://title screen/exit selected.png" type="Texture" id=7]

[node name="titlescreen-node" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 18.0
margin_top = 20.0
margin_right = 302.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 57.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 86.0
margin_top = 73.0
margin_right = 198.0
margin_bottom = 113.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 18.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 112.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
